chore: Update versions and spoon
Note that this might not work with newwer code still, as spoon has a bug
with CtResource...